[package]
name = "bbt"
version = "0.2.0"
authors = ["Johannes Holzfuß <johannes@holzfuss.name>"]
description = "A skill-rating system similar to Elo, Glicko or TrueSkill"
repository = "https://github.com/DataWraith/bbt"
documentation = "https://docs.rs/bbt/"
readme = "README.md"
keywords = ["bayesian", "skill", "rating"]
license = "MIT"
exclude = [".travis.yml"]

[dependencies]
serde = { version = "1.0.70", optional = true }

[dev-dependencies]
serde_json = "1.0.24"
