[package]
name = "bbt"
version = "1.0.0"
edition = "2024"
authors = ["Johannes Holzfuß <johannes@holzfuss.name>"]
description = "A skill-rating system similar to Elo, Glicko or TrueSkill"
repository = "https://github.com/DataWraith/bbt"
documentation = "https://docs.rs/bbt/"
readme = "README.md"
keywords = ["bayesian", "skill", "rating"]
license = "MIT"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
